# recomovie

./: Makefile  README.html  README.md  luigi.cfg  main.py  pyproject.toml  tasks.py
api/db/: core.py  films.py
api/routers/: films.py
notebooks/: task1-1-import-imdb-datasets.ipynb  task1-2-write-genre-parquets.ipynb  task2-1-cosine-similarity.ipynb  task2-2-similarity-functions.ipynb  task2-3-export_duckdb.ipynb  task3-search-query.ipynb
tests/: test_fastapi_up.py
tests/integration/: test_api.py
workflow/: task_cosine_similarity.py  task_create_duckdb.py  task_fetch_datasets.py  task_jupyter_ipynb.py  task_prep_films.py
